# rust-tetris

./: Cargo.toml  README.md  index.html
.github/workflows/: ci.yml  deploy.yml  release.yml
src/: game.rs  lib.rs  main.rs  render.rs  tetromino.rs
