[package]
name = "rust-tetris"
version = "1.0.0"
edition = "2024"
description = "TUI Tetris game in Rust with WebAssembly support"
license = "MIT"
repository = "https://github.com/aaronriekenberg/rust-tetris"

[[bin]]
name = "rust-tetris"
path = "src/main.rs"
required-features = ["tui"]

[lib]
name = "rust_tetris"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.10"
crossterm = { version = "0.29", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.4", features = ["wasm_js"] }

[features]
default = ["tui"]
tui = ["dep:crossterm"]

[profile.release]
opt-level = 3
lto = true
